Se agrega autenticación.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.password=userdatabase
 
 logging.level.root=DEBUG
 
-server.ssl.enabled=false
+jwt.secret=estoesunakey
+jwt.expiration.minutes=60
